// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media-posts test should render correctly 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-body"
    >
      <div
        class="card-title h5"
      >
        mockUser
      </div>
      <p
        class="card-text"
      >
        mockBody
      </p>
      <small>
        February 19, 2023 11:38 PM
      </small>
    </div>
  </div>
</div>
`;

exports[`social-media-posts test should render correctly with custom styles 1`] = `
<div>
  <div
    class="card"
    style="color: red;"
  >
    <div
      class="card-body"
    >
      <div
        class="card-title h5"
      >
        mockUser
      </div>
      <p
        class="card-text"
      >
        mockBody
      </p>
      <small>
        February 19, 2023 11:38 PM
      </small>
    </div>
  </div>
</div>
`;
